--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
     "eslint": "^8.49.0",
+    "prisma": "^5.2.0",
     "tsx": "^3.12.9",
     "typescript": "^5.2.2"
   },
