--- a/api/package.json
+++ b/api/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "fastify": "^4.23.0"
+  },
+  "imports": {
+    "@/*": "./src/*"
   }
 }
