--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "prisma": "^5.2.0",
     "tsx": "^3.12.9",
@@ -20,7 +21,9 @@
   "dependencies": {
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.2.0",
-    "fastify": "^4.23.0"
+    "fastify": "^4.23.0",
+    "openai": "^4.6.0",
+    "zod": "^3.22.2"
   },
   "imports": {
     "@/*": "./src/*"
